# burnless

./: .env.example  .gitignore  AGENTS.md  BENCHMARK_T5_FINDINGS.md  BURNLESS_FOR_LLMS.md  CHANGELOG.md  COUNTDOWN_DISCIPLINE.md  GEMINI.md  LICENSE  MATH.md  PAPER_2026-05-20.md  PLUGIN_PROTOCOL.md  PROTOCOL.md  README.md  RELEASE.md  SECURITY.md  SECURITY_AUDIT.md  SPEC.md  VISION.md  doctor_analysis.json  llms.txt  pyproject.toml  restart_rollover.sh
.claude/commands/: burnless-chat.md  burnless-delegate.md  burnless-plan.md  burnless-status.md  burnless.md
.codex/commands/: burnless.md
.github/workflows/: ci.yml
_design/: ASK_CONTROL_PLANE_HARDENING_2026-07-21.md  BENCHMARK_LINEAR_VS_QUADRATIC_2026-06-11.md  BENCHMARK_V2_HONEST_2026-06-11.md  BURNLESS_V1.md  BURNLESS_V1_GAIN_2026-06-09.md  CODEX_CHAT_ROLLOVER_2026-06-10.md  CODEX_NATIVE_INTEGRATION_2026-07-21.md  CONSOLIDATION_PLAN_2026-06-10.md  DOCTOR_AND_SETUP_HARDENING.md  FABLE_COSTMODEL_2026-06-09.md  FABLE_READINESS_AND_VERBOSE_2026-06-09.md  FABLE_REVIEW_2026-06-09.md  FABLE_SENIOR_REVIEW_2026-06-09.md  HANDOFF_SONNET_v074.md  MCP_SERVER_DESIGN_2026-05-20.md  RESUME_2026-05-19.md  RESUME_2026-06-03_dissect_burnless.md  REWRITE_CONCEPT_2026-06-09.md  TARGET_ARCHITECTURE_2026-06-09.md  always_hot_cache_2026_06_14.md  auto_syntax_check_runner_plan_2026-07-02.md  bench_linear_vs_quadratic.py  bench_v2_honest.py  burnless_config_verification_checklist.md  collapse_compression_2026_06_14.md  cut_chat_pty_2026_06_14.md  economy_report_2026-05-29.md  fair_benchmark_methodology_2026_06_14.md  footer_tier_visibility_2026-05-29.md  layer_audit_2026-05-29.md  layer_redesign_plan_2026-05-29.md  model_single_source_2026-05-29.md  p0_honest_exit_code_2026-05-29.md  profiles_spec.md  rename_partner_rollover_2026_06_14.md  rolling_memory_fix_ship_2026_06_13.md  rolling_memory_pure_chat_2026_06_13.md  subscription_support_plan.md  v04_landing_briefing.md
_design/hd_hygiene_2026-06-09/: config_inventory.md  doctrine_audit.md  global_config_reconciliation.md  quarantine_report.md
_design/maestro_v1/: README.md  brain_role.md  glossary.md  maestro_role.md  partner_role.md  schemas.md  worker_role.md
bench/: COMPRESSION_FINDINGS.md  README.md  SESSION_TELEMETRY.md  VS_SONNET_SOLO.md  ab_compact_encoders.py  aggregate_compression.py  brain_tier_compare.py  cache_invalidation.py  cache_persistence.py  cache_warm_check.py  daily_compare.py  filter_entrada_spike.py  prefix_cache_bench.py  replay_vs_capsule.py  restore_trust_ab.py  run.py  run_public.sh  session_cache_telemetry.py  session_token_audit.py  test_cache_cross_model.py  tier_routing_savings.py  v2.py
bench/results/: ab_compact_encoders.json  ab_compact_v2_llamacpp.json  ab_compact_v2_ollama.json  calibration.json  public_20260707T023540Z.json  public_20260707T023759Z.json  public_20260707T023927Z.json  public_20260707T024546Z.json  public_20260707T024720Z.json  public_20260710T224408Z.json  v2_simulated_20260503T035636Z.json  v2_simulated_20260503T152903Z.json  v2_simulated_20260504T184048Z.json  v2_simulated_20260614T001802Z.json
docs/: BRAIN_ADAPTERS.md  CACHE_PREFIX.md  COMMANDS.md  DOCTRINE.md  MAESTRO_ADAPTERS.md  USING_BURNLESS_FROM_YOUR_LLM.md  mcp.md  testing.md
docs/audits/: 2026-07-02-codex-deep-audit-RESULTADO.md  2026-07-02-codex-deep-audit-briefing.md  2026-07-02-fable-deep-audit-briefing.md  2026-07-03-fable-final-audit-native-clear-pilot.md  2026-07-04-living-md-hallucination.md
scripts/: f4_remediate_2026_07_04.py  instruction_surface_check.py  jsonl_doctor.py  public_git_check.sh  release_pypi.sh
site/: index.html  llms.txt  success.html
src/burnless/: __init__.py  (+93 more)
templates/: README.md  delegation_filter.sh  delegation_filter.sh.bak2
tests/: conftest.py  test_agent_cache_spine.py  test_anthropic_models.py  test_apply_capture_robustness.py  test_ask_adapters.py  test_ask_contracts.py  test_ask_envelope.py  test_audit.py  test_audit_filesystem_first.py  test_audit_graph.py  test_audit_graph_cli.py  test_audit_graph_runner.py  test_audit_stats.py  test_auto_syntax_gate.py  test_autobalance_cost.py  test_bench_linear_vs_quadratic.py  test_bench_scripts.py  test_bench_v2_honest.py  test_book_chapter_output_guard.py  test_book_outline_extension.py  test_brain_adapters.py  test_brain_role_telegraphic.py  test_budget_demotion.py  test_bytes_leak_envelope.py  test_cache_policy.py  test_cache_prefix.py  test_cadence.py  test_cadence_controller.py  test_cadence_providers.py  test_carry_forward_cache.py  test_carry_forward_consolidate.py  test_chain_claim.py  test_chain_migration_gc.py  test_chain_storage.py  test_chat_display.py  test_chat_mode.py  test_chat_rollover.py  test_chat_serve.py  test_chat_slash.py  test_chat_turn_router.py  (+202 more)
(+114 files in other folders)
