[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnless"
version = "0.5.8"
description = "Stop burning tokens on repeated context."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Roberto Monticelli Wydra" }]
license = { text = "MIT" }
keywords = ["llm", "ai", "agents", "context", "compression", "orchestration", "cost", "cache", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40",
    "prompt-toolkit>=3.0",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://burnless.pro"
Repository = "https://github.com/Rudekwydra/burnless"
Changelog = "https://github.com/Rudekwydra/burnless/blob/main/CHANGELOG.md"

[project.scripts]
burnless = "burnless.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/burnless"]
