[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnless"
version = "0.8.0"
description = "Multi-tier LLM orchestration with capsule-based session state, prefix-cache reuse per tier, and filesystem-first audit. Small Python framework for long multi-turn workloads."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Roberto Monticelli Wydra" }]
license = { text = "MIT" }
keywords = ["llm", "ai", "agents", "context", "compression", "orchestration", "cost", "cache", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40",
    "prompt-toolkit>=3.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "ptyprocess>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "build>=1.2", "twine>=6"]
release = ["build>=1.2", "twine>=6"]
brain-openai = ["openai>=1.50"]
brain-gemini = ["google-genai>=1.0"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://free.burnless.pro"
Repository = "https://github.com/Rudekwydra/burnless"
Changelog = "https://github.com/Rudekwydra/burnless/blob/main/CHANGELOG.md"

[project.scripts]
burnless = "burnless.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/burnless"]
